# BeatTrials

./: README.md
Game/: CMakeLists.txt  _json_tasks_notes.txt  notes.txt  tasks.json
Game/RhythmGame/NoteMainFrame/: data.py  load_song.json  main.py
Game/RhythmGame/NoteMainFrame/ParsedSongs/: Lost_Woods.txt
Game/RhythmGame/include/: DataTypes.hpp  GameManager.hpp
Game/RhythmGame/include/ClientSocket/: ClientHandler.hpp  runClientSocket.hpp
Game/RhythmGame/include/Note/: Note.hpp
Game/RhythmGame/include/RhythmCore/: GroupManager.hpp  Lane.hpp  LaneManager.hpp  SongInterpreter.hpp
Game/RhythmGame/include/RhythmCore/Note/: Note.hpp
Game/RhythmGame/include/RhythmCore/Screen/: Menu.hpp  MyScreen.hpp  runSinglePlayer.hpp
Game/RhythmGame/src/: main.cpp
Game/RhythmGame/src/RhythmCore/: GameManager.cpp  Lane.cpp  LaneManager.cpp  RhythmCore.cpp
Game/RythmGame/Note Parser/: NotesData.py  data.py  main.py
Game/RythmGame/NoteMainFrame/: data.py  load_song.json  main.py
Game/RythmGame/NoteMainFrame/ParsedSongs/: Lost_Woods.txt
Game/SocketServer/include/: ClientInfo.hpp  GameRoom.hpp  GameRoomManager.hpp  MyServer.hpp  jsonFormatNotes.txt
Game/SocketServer/src/: main.cpp
Game/ext/: CMakeLists.txt  vcpkg.json
